Build 100.3: Updated Upstart files

--- a/extras/conf/ewdjs-cache.conf
+++ b/extras/conf/ewdjs-cache.conf
@@ -1,4 +1,4 @@
-description "ewdjs server"
+description "EWD.js Service Upstart File for Cache"
 author      "Rob Tweed"
 
 start on started mountall
@@ -8,14 +8,19 @@ stop on shutdown
 respawn
 respawn limit 10 5
 
-env VERS="v0.10.39"
+# Change the value of USER below to the appropriate user name for your Ubuntu / Cache system
+
 env USER="robtweed"
 
+# Change the value of CACHEPATH below to the appropriate path for your Cache installation
+
+env CACHEPATH="/opt/cache"
+
 script
-    export HOME="/home/$USER/"
-    exec /bin/bash -c 'source /home/$USER/.nvm/nvm.sh && export NODE_ENV=production && exec /home/$USER/.nvm/$VERS/bin/node /home/$USER/ewdjs/ewdStart-cache-linux.js' >> /var/log/ewdjs.log 2>&1
+
+    # Checks to see if Cache is running.  If not, it starts it up
+
+    exec /bin/bash -c 'cd $CACHEPATH/mgr && [ -f cache.lck ] || $CACHEPATH/bin/ccontrol start cache && source /home/$USER/.nvm/nvm.sh && export NODE_ENV=production && cd /home/$USER/ewdjs && node ewdStart-cache-linux.js' >> /var/log/ewdjs.log 2>&1
 end script
 
-post-start script
-   # Optionally put a script here that will notifiy you node has (re)started
-end script
+
