--- a/extras/conf/ewdjs-gtm.conf
+++ b/extras/conf/ewdjs-gtm.conf
@@ -1,4 +1,4 @@
-description "ewdjs server"
+description "EWD.js Service Upstart File for GT.M"
 author      "Rob Tweed"
 
 start on started mountall
@@ -8,15 +8,10 @@ stop on shutdown
 respawn
 respawn limit 10 5
 
-env VERS="versions/node/v0.12.6"
+# Change the value of USER below to the appropriate user name for your Ubuntu / GT.M system
+
 env USER="robtweed"
 
 script
-    export HOME="/home/$USER/"
-    exec /bin/bash -c 'source /home/$USER/.nvm/nvm.sh && export NODE_ENV=production && exec /home/$USER/.nvm/$VERS/bin/node /home/$USER/ewdjs/ewdStart-gtm.js gtm-config' >> /var/log/ewdjs.log 2>&1
+    exec su -l $USER -c 'source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-gtm gtm-config' >> /var/log/ewdjs.log 2>&1
 end script
-
-post-start script
-   # Optionally put a script here that will notifiy you node has (re)started
-end script
-
