--- a/extras/conf/ewdjs-cache.conf
+++ b/extras/conf/ewdjs-cache.conf
@@ -1,7 +1,7 @@
 description "EWD.js Service Upstart File for Cache"
 author      "Rob Tweed"
 
-start on started mountall
+start on runlevel [2345]
 stop on shutdown
 
 # Automatically Respawn:
