--- a/extras/conf/ewdjs-dewdrop.conf
+++ b/extras/conf/ewdjs-dewdrop.conf
@@ -1,7 +1,7 @@
 description "EWD.js Upstart script for dEWDrop server"
 author      "Rob Tweed"
 
-start on started mountall
+start on runlevel [2345]
 stop on shutdown
 
 # Automatically Respawn:
