Build 100.5: Enhancements to Upstart script for GlobalsDB

--- a/extras/conf/ewdjs-globals.conf
+++ b/extras/conf/ewdjs-globals.conf
@@ -8,10 +8,12 @@ stop on shutdown
 respawn
 respawn limit 10 5
 
-# Change the value of USER below to the appropriate user name for your Ubuntu / GlobalsDB system
+# Change the value of USER below to the appropriate user name for your Ubuntu / GlobalsDB Server
 
 env USER="robtweed"
 
 script
-    exec su -l $USER -c 'source ~/.nvm/nvm.sh && cd globalsdb/mgr && [ -f cache.lck ] || ./startGlobals && cd ~/ewdjs && node ewdStart-globals' >> /var/log/ewdjs.log 2>&1
+    # First part starts up GlobalsDB only at startup (uptime is less than 1 minute)
+
+    su -l $USER -c 'cd globalsdb/mgr && UPTIME=$(cut -f1 -d" "< /proc/uptime) && UPTIME=${UPTIME/.*} && [ $UPTIME -ge 60 ] || ./startGlobals && source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-globals' >> /var/log/ewdjs.log 2>&1
 end script
