Buld 100.6: Enhanced GT.M upstart script

--- a/extras/conf/ewdjs-gtm.conf
+++ b/extras/conf/ewdjs-gtm.conf
@@ -13,5 +13,10 @@ respawn limit 10 5
 env USER="robtweed"
 
 script
-    exec su -l $USER -c 'source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-gtm gtm-config' >> /var/log/ewdjs.log 2>&1
+    su -l $USER -c 'source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-gtm gtm-config' >> /var/log/ewdjs.log 2>&1
+end script
+
+post-stop script
+  #force down all node processes that are left hanging
+  pkill node
 end script
