Build 100.8: Enhanced Upstart file for Cache / Linux

--- a/extras/conf/ewdjs-cache.conf
+++ b/extras/conf/ewdjs-cache.conf
@@ -18,9 +18,7 @@ env CACHEPATH="/opt/cache"
 
 script
 
-    # Checks to see if Cache is running.  If not, it starts it up
+    # First part starts up Cache only at startup (uptime is less than 1 minute)
 
-    exec /bin/bash -c 'cd $CACHEPATH/mgr && [ -f cache.lck ] || $CACHEPATH/bin/ccontrol start cache && source /home/$USER/.nvm/nvm.sh && export NODE_ENV=production && cd /home/$USER/ewdjs && node ewdStart-cache-linux.js' >> /var/log/ewdjs.log 2>&1
+    exec /bin/bash -c 'cd $CACHEPATH/mgr && UPTIME=$(cut -f1 -d" "< /proc/uptime) && UPTIME=${UPTIME/.*} && [ $UPTIME -ge 60 ] || $CACHEPATH/bin/ccontrol start cache && source /home/$USER/.nvm/nvm.sh && cd /home/$USER/ewdjs && export NODE_ENV=production && node ewdStart-cache-linux.js' >> /var/log/ewdjs.log 2>&1
 end script
-
-
