--- a/extras/conf/ewdjs-dewdrop.conf
+++ b/extras/conf/ewdjs-dewdrop.conf
@@ -13,7 +13,7 @@ respawn limit 10 5
 env USER="vista"
 
 script
-    exec su -l $USER -c 'source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-gtm.js dewdrop-config' >> /var/log/ewdjs.log 2>&1
+    su -l $USER -c 'source ~/.nvm/nvm.sh && cd ~/ewdjs && node ewdStart-gtm dewdrop-config' >> /var/log/ewdjs.log 2>&1
 end script
 
 
