Build 110: Default web page & custom web service response headers

--- a/extras/conf/ewdjs-cache.conf
+++ b/extras/conf/ewdjs-cache.conf
@@ -1,5 +1,5 @@
 description "EWD.js Service Upstart File for Cache"
-author      "Rob Tweed"
+author      "Rob Tweed, with acknowledgement to Mike Clayton for original design"
 
 start on runlevel [2345]
 stop on shutdown
